[package]
name = "aoc-solver"
version = "0.1.0"
edition = "2021"
authors = ["quomatz <quomatz@outlook.com>"]
default-run = "aoc-runner"

[lib]
name = "aoc"
path = "src/lib.rs"

[[bin]]
name = "aoc-runner"
path = "src/main.rs"

[[bin]]
name = "aoc-playground"
path = "src/playground.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.3"
nom-supreme = "0.8.0"
itertools = "0.10.5"
paste = "1.0.12"
rand = "0.8.5"
bitvec = "1.0.1"
enum-map = "2.5.0"
text_io = "0.1.12"
